Fixed sort function. Fixed mutual constraining. Fixed facets names wrapping.

--- a/css/facebase.css
+++ b/css/facebase.css
@@ -119,6 +119,10 @@ td.facet_checkbox {
 	white-space:nowrap;
 }
 
+.facet_name {
+	white-space:nowrap;
+}
+
 input.facet_checkbox {
 	margin: 0px;
 	line-height:5px;
